# cyberarena-api

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README_dev.md  alembic.ini  pyproject.toml  requierements.txt  requirements.txt
.github/workflows/: tests.yml
cyberarena/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
cyberarena/data/cards/GlobuzorBloubix/: data.json
cyberarena/data/cards/Lisa/: data.json
cyberarena/db/: base.py  dependencies.py  utils.py
cyberarena/db/dao/: dummy_dao.py  game_dao.py  user_dao.py
cyberarena/db/migrations/: env.py
cyberarena/db/models/: __init__.py  dummy_model.py  game_model.py  user_model.py
cyberarena/game_module/: __init__.py  __main__.py  board.py  deck.py  exceptions.py  game.py  game_manager.py  hand.py  image_card_generator.py  player.py  settings.py  utils.py
cyberarena/game_module/card/: __init__.py  base.py  card_info.py  constructor.py  decorator.py  enums.py  factory.py  library.py  playable.py  playable_character.py  playable_object.py
cyberarena/services/: __init__.py
cyberarena/src/: Card.py  Deck.py  Game.py  Hand.py  card.py  card_base.py  card_constructor.py  deck.py  hand.py  player.py  settings.py
cyberarena/static/docs/: redoc.standalone.js  swagger-ui-bundle.js
cyberarena/tests/: __init__.py  test_connection.py  test_dummy.py  test_economy.py  test_profile.py
cyberarena/tests/gameModel/: test_card.py  test_card_constructor.py  test_hand.py  test_player.py
cyberarena/tests/game_module/: test_board.py  test_deck.py  test_game.py  test_game_manager.py  test_hand.py  test_player.py
cyberarena/web/: __init__.py  application.py  lifetime.py
cyberarena/web/api/: __init__.py  router.py
deploy/: Dockerfile  Dockerfile.nginx.dev  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
deploy/backend/: Dockerfile
deploy/frontend/: Dockerfile.react  Dockerfile.react.dev
docs/source/: conf.py  index.rst
docs/source/gamemodule/: interface.rst
docs/source/overview/: index.rst  principle.rst
nginx/: nginx.dev.conf  nginx.prod.conf
(+76 files in other folders)
